# cmake_hello_world

./: CMakeLists.txt  README.md  helloworld.cpp  mult5.cpp  mult5.h  test_mult5.cpp
